docs/api/qiskit/0.19/qiskit.aqua.components.neural_networks.DiscriminativeNetwork.mdx
---
title: DiscriminativeNetwork (v0.19)
description: API reference for qiskit.aqua.components.neural_networks.DiscriminativeNetwork in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.neural_networks.DiscriminativeNetwork
---

# DiscriminativeNetwork

<Class id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/neural_networks/discriminative_network.py" signature="DiscriminativeNetwork" modifiers="class">
  Base class for discriminative Quantum or Classical Neural Networks.

  This method should initialize the module but raise an exception if a required component of the module is not available.

  ## Methods

  <span id="discriminativenetwork-get-label" />

  ### get\_label

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.get_label" signature="DiscriminativeNetwork.get_label(x)" modifiers="abstract">
    Apply quantum/classical neural network to the given input sample and compute the respective data label

    **Parameters**

    **x** (*Discriminator*) – input, i.e. data sample.

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  <span id="discriminativenetwork-loss" />

  ### loss

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.loss" signature="DiscriminativeNetwork.loss(x, y, weights=None)" modifiers="abstract">
    Loss function used for optimization

    **Parameters**

    *   **x** (*Discriminator*) – output.
    *   **y** (*Label*) – the data point
    *   **weights** (*numpy.ndarray*) – Data weights.

    **Returns**

    Loss w\.r.t to the generated data points.

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  <span id="discriminativenetwork-set-seed" />

  ### set\_seed

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.set_seed" signature="DiscriminativeNetwork.set_seed(seed)" modifiers="abstract">
    Set seed.

    **Parameters**

    **seed** (*int*) – seed

    **Raises**

    **NotImplementedError** – not implemented
  </Function>

  <span id="discriminativenetwork-train" />

  ### train

  <Function id="qiskit.aqua.components.neural_networks.DiscriminativeNetwork.train" signature="DiscriminativeNetwork.train(data, weights, penalty=False, quantum_instance=None, shots=None)" modifiers="abstract">
    Perform one training step w\.r.t to the discriminator’s parameters

    **Parameters**

    *   **data** (*numpy.ndarray*) – Data batch.
    *   **weights** (*numpy.ndarray*) – Data sample weights.
    *   **penalty** (*bool*) – Indicate whether or not penalty function is applied to the loss function. Ignored if no penalty function defined.
    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – used to run Quantum network. Ignored for a classical network.
    *   **shots** (*int*) – Number of shots for hardware or qasm execution. Ignored for classical network

    **Returns**

    with Discriminator loss and updated parameters.

    **Return type**

    dict

    **Raises**

    **NotImplementedError** – not implemented
  </Function>
</Class>

